# rcal

./: CHANGELOG.md  LICENSE  README.md  rcal.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
