cabal-version: 3.0
name: rcal
version: 0.1.0.0
synopsis: Raid-cost calculator CLI for Rust
-- description:
homepage: https://github.com/LivewareIssue/rcal
license: MIT
license-file: LICENSE
author: Thomas Bates
maintainer: me@tom-bates.co.uk
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:
        -Wall

executable rcal
    import: warnings
    main-is: Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>= 4.17.2.1,
        text ^>= 2.0.2,
        containers ^>= 0.6.7,
        vector-space ^>= 0.16,
        text-show ^>= 3.10.5
    hs-source-dirs: app
    default-language: GHC2021
